force-app/main/default/objects/Project__c/fields/Estimate_Approval_Date_Week_Ending__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Approval_Date_Week_Ending__c</fullName>
    <description>Needed to Report Week Ending (Monday-Sunday) since Salesforce uses Sunday-Saturday.</description>
    <formula>IF(ISBLANK( Estimate_Approval_Date__c ),NULL,CASE(MOD(Estimate_Approval_Date__c - DATE(1900, 1, 7), 7),


0, Estimate_Approval_Date__c + 0,


1, Estimate_Approval_Date__c + 6,


2, Estimate_Approval_Date__c + 5,


3, Estimate_Approval_Date__c + 4,


4, Estimate_Approval_Date__c + 3,


5, Estimate_Approval_Date__c + 2,


6, Estimate_Approval_Date__c + 1,


TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Needed to Report Week Ending (Monday-Sunday) since Salesforce uses Sunday-Saturday.</inlineHelpText>
    <label>Estimate Approval Date-Week Ending</label>
    <type>Date</type>
</CustomField>