force-app/main/default/objects/Project__c/fields/Estimate_Company__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>