force-app/main/default/objects/Project__c/fields/Estimate_Photos_Taken__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Photos_Taken__c</fullName>
    <label>Estimate Photos Taken?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>