force-app/main/default/objects/Project__c/fields/Estimate_Photos_URL__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Photos_URL__c</fullName>
    <label>Estimate Photos Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>