force-app/main/default/objects/Project__c/fields/Estimate_Pictures_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Pictures_End_Date__c</fullName>
    <label>Estimate Pictures End Date</label>
    <type>DateTime</type>
</CustomField>