force-app/main/default/objects/Project__c/fields/Estimate_Pictures_is_completed__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Pictures_is_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Backend field</description>
    <label>Estimate Pictures is completed ?</label>
    <type>Checkbox</type>
</CustomField>