force-app/main/default/objects/Project__c/fields/Estimate_Pictures_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Pictures_Start_Date__c</fullName>
    <label>Estimate Pictures Start Date</label>
    <type>DateTime</type>
</CustomField>