force-app/main/default/objects/Project__c/fields/Estimate_Writing__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Writing__c</fullName>
    <defaultValue>225</defaultValue>
    <label>Estimate Writing</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>