force-app/main/default/objects/Project__c/fields/Final_Amount_Paid_by_SS_for_Rental__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount_Paid_by_SS_for_Rental__c</fullName>
    <description>Created for TRACKING RENTAL REIMBURSEMENT(SS-T825)</description>
    <formula>Total_Amount_Paid_By_Storm_Solutions__c - Total_Reimbursement_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount Paid by SS for Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>