force-app/main/default/objects/Project__c/fields/Google_Folder_JSON__c.field-meta.xml
<CustomField>
    <fullName>Google_Folder_JSON__c</fullName>
    <label>Google Folder JSON(Backend Field)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>