force-app/main/default/objects/Project__c/fields/Has_Initial_Estimate_First_Look__c.field-meta.xml
<CustomField>
    <fullName>Has_Initial_Estimate_First_Look__c</fullName>
    <description>Has Initial Estimate / First Look?</description>
    <label>Has Initial Estimate / First Look?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>