force-app/main/default/objects/Project__c/fields/Has_the_rental_vehicle_been_returned__c.field-meta.xml
<CustomField>
    <fullName>Has_the_rental_vehicle_been_returned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Guidance for success: 
a) Is gas at the correct level for return?
b)Is rental in good shape?</inlineHelpText>
    <label>Has the rental vehicle been returned?</label>
    <type>Checkbox</type>
</CustomField>