force-app/main/default/objects/Project__c/fields/Hatch_Begin_Repair__c.field-meta.xml
<CustomField>
    <fullName>Hatch_Begin_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hatch Begin Repair?</label>
    <type>Checkbox</type>
</CustomField>