force-app/main/default/objects/Project__c/fields/Hatch_Max_Out_Conventional__c.field-meta.xml
<CustomField>
    <fullName>Hatch_Max_Out_Conventional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max Out/Conventional</label>
    <type>Checkbox</type>
</CustomField>