force-app/main/default/objects/Project__c/fields/Hatch_Supplement_Required__c.field-meta.xml
<CustomField>
    <fullName>Hatch_Supplement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hatch:Additional Photos?</label>
    <type>Checkbox</type>
</CustomField>