force-app/main/default/objects/Project__c/fields/Hatch_Write_Supplement__c.field-meta.xml
<CustomField>
    <fullName>Hatch_Write_Supplement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hatch: Write Supplement?</label>
    <type>Checkbox</type>
</CustomField>