force-app/main/default/objects/Project__c/fields/Hood_Begin_Repair__c.field-meta.xml
<CustomField>
    <fullName>Hood_Begin_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hood Begin Repair?</label>
    <type>Checkbox</type>
</CustomField>