force-app/main/default/objects/Project__c/fields/Hood_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Hood_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hood Replacement</description>
    <label>Hood Replacement</label>
    <type>Checkbox</type>
</CustomField>