force-app/main/default/objects/Project__c/fields/Hood_Supplement_Required__c.field-meta.xml
<CustomField>
    <fullName>Hood_Supplement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hood:Additional Photos?</label>
    <type>Checkbox</type>
</CustomField>