force-app/main/default/objects/Project__c/fields/Hood_Write_Supplement__c.field-meta.xml
<CustomField>
    <fullName>Hood_Write_Supplement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hood: Write Supplement?</label>
    <type>Checkbox</type>
</CustomField>