force-app/main/default/objects/Project__c/fields/I_S_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>I_S_Sub_Status__c</fullName>
    <description>15/04 Created to capture the latest completed Substage for I&amp;S</description>
    <label>I&amp;S Sub-Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>