force-app/main/default/objects/Project__c/fields/I_S_Substage_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>I_S_Substage_Created_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Created to capture I&amp;S latest substage</description>
    <label>I&amp;S Substage Created Date</label>
    <type>DateTime</type>
</CustomField>