force-app/main/default/objects/Project__c/fields/In_Out__c.field-meta.xml
<CustomField>
    <fullName>In_Out__c</fullName>
    <label>In/Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Shop</fullName>
            </value>
            <value>
                <fullName>Out of Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>