force-app/main/default/objects/Project__c/fields/Income_After_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Income_After_Expenses__c</fullName>
    <formula>Total_Revenue__c -   Total_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income After Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>