force-app/main/default/objects/Project__c/fields/Income_After_Payout__c.field-meta.xml
<CustomField>
    <fullName>Income_After_Payout__c</fullName>
    <formula>Income_After_Expenses__c - (Total_Admin_Sales_Tech_Payout__c + Justin_Payout1__c)</formula>
    <label>Profit to Disburse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>