force-app/main/default/objects/Project__c/fields/Initial_Amount_Paid_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Initial_Amount_Paid_to_Customer__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created for TRACKING RENTAL REIMBURSEMENT(SS-T825)</description>
    <label>Initial Amount Paid to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>