force-app/main/default/objects/Project__c/fields/Initial_Amount_paid_to_Rental_Company_by__c.field-meta.xml
<CustomField>
    <fullName>Initial_Amount_paid_to_Rental_Company_by__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created for TRACKING RENTAL REIMBURSEMENT(SS-T825)</description>
    <label>Initial Amt paid to Rental Company by SS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>