force-app/main/default/objects/Project__c/fields/Initial_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Initial_Estimate__c</fullName>
    <description>To capture if the customer have already got their vehicles estimated by the insurance company and if yes how much it is.</description>
    <label>Initial Estimate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>