force-app/main/default/objects/Project__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Co.</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Insurance Company)</relationshipLabel>
    <relationshipName>Insurance_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>