force-app/main/default/objects/Project__c/fields/Insurance_Co__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Co__c</fullName>
    <formula>Insurance__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Co.</label>
    <type>Text</type>
</CustomField>