force-app/main/default/objects/Project__c/fields/Insurance_Estimate_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Estimate_Folder_ID__c</fullName>
    <label>Insurance Estimate Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>