force-app/main/default/objects/Project__c/fields/Insurance_Supplements_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Supplements_Folder_ID__c</fullName>
    <label>Insurance Supplements Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>