force-app/main/default/objects/Project__c/fields/Insurance_Supplements_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Supplements_Status__c</fullName>
    <label>Insurance &amp; Supplements Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prelim Received from G&amp;G</fullName>
            </value>
            <value>
                <fullName>Estimate Sent to Ins</fullName>
            </value>
            <value>
                <fullName>Awaiting Ins Approval</fullName>
            </value>
            <value>
                <fullName>Need additional photos</fullName>
            </value>
            <value>
                <fullName>Supp Info Sent to G&amp;G</fullName>
            </value>
            <value>
                <fullName>Supp Received from G&amp;G</fullName>
            </value>
            <value>
                <fullName>Supp Submitted to Insurance</fullName>
            </value>
            <value>
                <fullName>Awaiting Supp Ins Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Total Loss</fullName>
            </value>
            <value>
                <fullName>Management Approval</fullName>
            </value>
            <value>
                <fullName>Payment Verification</fullName>
            </value>
            <value>
                <fullName>Total Loss confirmed</fullName>
            </value>
            <value>
                <fullName>Ins Pay Repair SuppEmail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>