force-app/main/default/objects/Project__c/fields/Intake_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Intake_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake: Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects9</relationshipName>
    <type>Lookup</type>
</CustomField>