force-app/main/default/objects/Project__c/fields/Intake_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Intake_End_Date__c</fullName>
    <label>Intake End Date</label>
    <type>Date</type>
</CustomField>