force-app/main/default/objects/Project__c/fields/Intake_Process_Duration__c.field-meta.xml
<CustomField>
    <fullName>Intake_Process_Duration__c</fullName>
    <formula>Intake_End_Date__c  -  Intake_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Process Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>