force-app/main/default/objects/Project__c/fields/Intake_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Intake_Start_Date__c</fullName>
    <label>Intake Start Date</label>
    <type>Date</type>
</CustomField>