force-app/main/default/objects/Project__c/fields/Intake_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Status__c</fullName>
    <label>Intake Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keys Inhand</fullName>
            </value>
            <value>
                <fullName>Hanger and Keys Tagged</fullName>
            </value>
            <value>
                <fullName>VIN Added</fullName>
            </value>
            <value>
                <fullName>Prior Damage Photos in G Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>