force-app/main/default/objects/Project__c/fields/Intake_User_LoggedIn_Flag__c.field-meta.xml
<CustomField>
    <fullName>Intake_User_LoggedIn_Flag__c</fullName>
    <description>Flag to check if the logged in user is same as Intake assigned user</description>
    <formula>IF( Intake_Assigned_To__c = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag to check if the logged in user is same as Intake assigned user</inlineHelpText>
    <label>Intake User LoggedIn Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>