force-app/main/default/objects/Project__c/fields/Interior_Number_of_Dents__c.field-meta.xml
<CustomField>
    <fullName>Interior_Number_of_Dents__c</fullName>
    <label>Number of Dents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>