force-app/main/default/objects/Project__c/fields/Internal_Estiimate__c.field-meta.xml
<CustomField>
    <fullName>Internal_Estiimate__c</fullName>
    <label>Prelims Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>