force-app/main/default/objects/Project__c/fields/Invoice_Order_Part_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Order_Part_Folder_ID__c</fullName>
    <label>Invoice Order Part Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>