force-app/main/default/objects/Project__c/fields/Is_Payment_Verification_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Verification_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Verification Completed?</label>
    <type>Checkbox</type>
</CustomField>