force-app/main/default/objects/Project__c/fields/Is_Rental_Covered_In_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Is_Rental_Covered_In_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is There Insurance Rental Coverage ?</label>
    <type>Checkbox</type>
</CustomField>