force-app/main/default/objects/Project__c/fields/Is_The_Vehicle_Pickup_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Is_The_Vehicle_Pickup_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is The Vehicle Pickup Scheduled?</label>
    <type>Checkbox</type>
</CustomField>