force-app/main/default/objects/Project__c/fields/Is_Total_Amount_Receivable_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Total_Amount_Receivable_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensure to add all the Insurance supplements and customer payments and then verify.</inlineHelpText>
    <label>Is Total amount receivable confirmed?</label>
    <type>Checkbox</type>
</CustomField>