force-app/main/default/objects/Project__c/fields/Julian_Payout__c.field-meta.xml
<CustomField>
    <fullName>Julian_Payout__c</fullName>
    <formula>0.4* Income_After_Payout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Julian Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>