force-app/main/default/objects/Project__c/fields/Justin_Pay__c.field-meta.xml
<CustomField>
    <fullName>Justin_Pay__c</fullName>
    <description>Justin Pay in Project (VP Operations Commission in Worker Payment)</description>
    <label>Justin Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>