force-app/main/default/objects/Project__c/fields/Justin_Payout1__c.field-meta.xml
<CustomField>
    <fullName>Justin_Payout1__c</fullName>
    <formula>0.16* Income_After_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Justin Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>