force-app/main/default/objects/Project__c/fields/Keys_In_Hand_Duration__c.field-meta.xml
<CustomField>
    <fullName>Keys_In_Hand_Duration__c</fullName>
    <formula>Keys_In_Hand_End_Date__c -  Keys_In_Hand_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Keys In Hand Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>