force-app/main/default/objects/Project__c/fields/Keys_In_Hand_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Keys_In_Hand_End_Date__c</fullName>
    <label>Keys In Hand End Date</label>
    <type>DateTime</type>
</CustomField>