force-app/main/default/objects/Project__c/fields/Keys_Tagged__c.field-meta.xml
<CustomField>
    <fullName>Keys_Tagged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hanger and Keys Tagged</label>
    <type>Checkbox</type>
</CustomField>