force-app/main/default/objects/Project__c/fields/Labor_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Labor_Revenue__c</fullName>
    <label>Labor Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>