force-app/main/default/objects/Project__c/fields/Labor_Tax__c.field-meta.xml
<CustomField>
    <fullName>Labor_Tax__c</fullName>
    <formula>Labor_Revenue__c *( Leads__r.Storm_Source__r.Labor_Tax_1__c /(1+Leads__r.Storm_Source__r.Labor_Tax_1__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>