force-app/main/default/objects/Project__c/fields/Lead_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_First_Name__c</fullName>
    <label>Lead First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>