force-app/main/default/objects/Project__c/fields/Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leads</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>