force-app/main/default/objects/Project__c/fields/Left_Cab_Max_Out_Conventional__c.field-meta.xml
<CustomField>
    <fullName>Left_Cab_Max_Out_Conventional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>21/06/21 Indu Added for Scope Form Requirement</description>
    <label>Max Out/Conventional</label>
    <type>Checkbox</type>
</CustomField>