force-app/main/default/objects/Project__c/fields/Left_Cab_Supplement_Required__c.field-meta.xml
<CustomField>
    <fullName>Left_Cab_Supplement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplement Required?</label>
    <type>Checkbox</type>
</CustomField>