force-app/main/default/objects/Project__c/fields/Left_Fender_Supplement_Required__c.field-meta.xml
<CustomField>
    <fullName>Left_Fender_Supplement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Fender: Additional Photos?</label>
    <type>Checkbox</type>
</CustomField>