force-app/main/default/objects/Project__c/fields/Left_Fender_Write_Supplement__c.field-meta.xml
<CustomField>
    <fullName>Left_Fender_Write_Supplement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Fender: Write Supplement?</label>
    <type>Checkbox</type>
</CustomField>